<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/cancel"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/confirm"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/time_selector_title"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
        app:layout_constraintLeft_toRightOf="@id/tv_cancel"
        app:layout_constraintRight_toLeftOf="@id/tv_select"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/split_line"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/text_light_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel" />

    <com.global.ustewardWidget.DatePickerView
        android:id="@+id/pv_year"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_160"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/split_line" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/year"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pv_year"
        app:layout_constraintRight_toLeftOf="@id/pv_month"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <com.global.ustewardWidget.DatePickerView
        android:id="@+id/pv_month"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/tv_year"
        app:layout_constraintRight_toLeftOf="@id/tv_month"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/month"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pv_month"
        app:layout_constraintRight_toLeftOf="@id/pv_day"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <com.global.ustewardWidget.DatePickerView
        android:id="@+id/pv_day"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/tv_month"
        app:layout_constraintRight_toLeftOf="@id/tv_day"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pv_day"
        app:layout_constraintRight_toLeftOf="@id/pv_hour"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <com.global.ustewardWidget.DatePickerView
        android:id="@+id/pv_hour"
        android:layout_width="48dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/tv_day"
        app:layout_constraintRight_toLeftOf="@id/tv_hour"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/hour"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pv_hour"
        app:layout_constraintRight_toLeftOf="@id/pv_minute"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <com.global.ustewardWidget.DatePickerView
        android:id="@+id/pv_minute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/tv_hour"
        app:layout_constraintRight_toLeftOf="@id/tv_minute"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />

    <TextView
        android:id="@+id/tv_minute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/minute"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/pv_year"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pv_minute"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pv_year" />
</android.support.constraint.ConstraintLayout>